# popcorn

./: .gitignore  Cargo.toml  LICENSE
migrations/2019-01-23-082647_create_writers/: down.sql  up.sql
migrations/2019-01-23-084452_create_directors/: down.sql  up.sql
migrations/2019-01-23-084807_create_artists/: down.sql  up.sql
migrations/2019-01-23-085115_create_movies/: down.sql  up.sql
migrations/2019-01-23-092633_create_users/: up.sql
migrations/2019-07-03-075921_create_ratings/: up.sql
migrations/2019-07-03-083629_add_movies_score/: down.sql  up.sql
migrations/2019-10-17-164137_add_rating/: down.sql  up.sql
migrations/2019-11-06-123129_add_watchlist/: down.sql  up.sql
migrations/2019-11-07-164352_add_favorite/: down.sql  up.sql
src/: config.rs  consts.rs  error.rs  lib.rs  schema.rs  types.rs
src/db/: auth.rs  mod.rs  models.rs  movie_rate.rs  movies_favorites.rs  movies_rate.rs  movies_watchlist.rs  schema.rs
src/db/crud/: mod.rs  movie_rate.rs
src/db/raw/: movies-search.sql  movies.sql
src/filter/: mod.rs  types.rs
src/types/: data.rs  mod.rs  query.rs  req_guards.rs  res.rs
