[package]
name = "popcorn"
version = "0.1.0"
authors = ["ryakosh <ryakosh@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
jsonwebtoken = "5.0.1"
serde = "1.0.85"
serde_derive = "1.0.85"
chrono = "0.4.6"
regex = "1.1.0"
lazy_static = "1.2.0"