[package]
name = "popcorn"
version = "0.1.0"
authors = ["ryakosh <ryakosh@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
jsonwebtoken = "5.0.1"
serde = "1.0.85"
serde_derive = "1.0.85"
chrono = { version = "0.4.6", features = ["serde"] }
regex = "1.1.0"
lazy_static = "1.2.0"
toml = "0.4.10"
rocket_cors = "0.4.0"
rust-argon2 = "0.8.1"
getrandom = "0.1.14"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_postgres_pool"]